correção page principal

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carvalho Sport's</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="shortcut icon" href="" type="image/x-icon">
+    <!--<link rel="shortcut icon" href="" type="image/x-icon">-->
 </head>
 
 <body>
@@ -16,11 +16,11 @@
     </header>
     <!--6 nav-->
     <nav>
-        <a href="/index.html" target="_self">Pagina Inicial</a>
-        <a href="pages/chuteiras.html" target="_blank">Chuteiras</a>
-        <a href="/pages/camisas.html" target="_self">Camisas de Time</a>
-        <a href="/pages/materialSport.html" target="_self">Acessórios Esportivo</a>
-        <a href="/pages/tenis.html" target="_self">Tenis Esportivos</a>
+        <a href="/index.html">Pagina Inicial</a>
+        <a href="pages/chuteiras.html">Chuteiras</a>
+        <a href="pages/camisas.html">Camisas de Time</a>
+        <a href="pages/materialSport.html">Acessórios Esportivo</a>
+        <a href="pages/tenis.html">Tenis Esportivos</a>
     </nav>
     <!--8 main-->
     <!-- <main> -->
@@ -51,12 +51,12 @@
         </section>
         <section>
             <article>
-                <img src="/imgPrincipal/newChuteiras/nike azul.jpg" alt="nike">
-                <img src="/imgPrincipal/newChuteiras/nike preta.jpg" alt="nike">
-                <img src="/imgPrincipal/newChuteiras/nike roza.jpg" alt="nike">
-                <img src="/imgPrincipal/newChuteiras/nike verde.jpg" alt="nike">
-                <img src="/imgPrincipal/newChuteiras/nike azul.jpg" alt="nike">
-                <img src="/imgPrincipal/newChuteiras/nike roza.jpg" alt="nike">
+                <img src="imgPrincipal/newChuteiras/nike azul.jpg" alt="nike">
+                <img src="imgPrincipal/newChuteiras/nike preta.jpg" alt="nike">
+                <img src="imgPrincipal/newChuteiras/nike roza.jpg" alt="nike">
+                <img src="imgPrincipal/newChuteiras/nike verde.jpg" alt="nike">
+                <img src="imgPrincipal/newChuteiras/nike azul.jpg" alt="nike">
+                <img src="imgPrincipal/newChuteiras/nike roza.jpg" alt="nike">
             </article>
             <h4>Para ver mais Chuteiras, clique e acesse:</h4>
             <a href="pages/chuteiras.html">Chuteiras</a>
@@ -65,27 +65,27 @@
         <section>
             <article>
                 <h3>Camisas de Time.</h3>
-                <img src="/imgPrincipal/Camisas/botafogo.png" alt="camisaTime">
-                <img src="/imgPrincipal/Camisas/camisa.jpg" alt="camisaTime">
-                <img src="/imgPrincipal/Camisas/camisaPalmeiras.webp" alt="camisaTime">
-                <img src="/imgPrincipal/Camisas/botafogo.png" alt="camisaTime">
-                <img src="/imgPrincipal/Camisas/camisaSp.webp" alt="camisaTime">
-                <img src="/imgPrincipal/Camisas/camisaCorinthias.webp" alt="camisaTime">
+                <img src="imgPrincipal/Camisas/botafogo.png" alt="camisaTime">
+                <img src="imgPrincipal/Camisas/camisa.jpg" alt="camisaTime">
+                <img src="imgPrincipal/Camisas/camisaPalmeiras.webp" alt="camisaTime">
+                <img src="imgPrincipal/Camisas/botafogo.png" alt="camisaTime">
+                <img src="imgPrincipal/Camisas/camisaSp.webp" alt="camisaTime">
+                <img src="imgPrincipal/Camisas/camisaCorinthias.webp" alt="camisaTime">
 
                 <h4>Para ver mais Camisas de Time, clique e acesse:</h4>
-                <a href="/pages/camisas.html">Camisas de Time</a>
+                <a href="pages/camisas.html">Camisas de Time</a>
             </article>
             <!-- fim da parte de camisas -->
         </section>
         <section>
             <article>
                 <h3>Acessórios Esportivo.</h3>
-                <img src="/imgPrincipal/materialSport/copoPalmeiras.webp" alt="nike">
-                <img src="/imgPrincipal/materialSport/bolsaBotafogo.png" alt="nike">
-                <img src="/imgPrincipal/materialSport/garrafaCorinthias.webp" alt="nike">
-                <img src="/imgPrincipal/materialSport/157486-500-auto.webp" alt="nike">
-                <img src="/imgPrincipal/materialSport/copoPalmeiras.webp" alt="nike">
-                <img src="/imgPrincipal/materialSport/garrafaCorinthias.webp" alt="nike">
+                <img src="imgPrincipal/materialSport/copoPalmeiras.webp" alt="nike">
+                <img src="imgPrincipal/materialSport/bolsaBotafogo.png" alt="nike">
+                <img src="imgPrincipal/materialSport/garrafaCorinthias.webp" alt="nike">
+                <img src="imgPrincipal/materialSport/157486-500-auto.webp" alt="nike">
+                <img src="imgPrincipal/materialSport/copoPalmeiras.webp" alt="nike">
+                <img src="imgPrincipal/materialSport/garrafaCorinthias.webp" alt="nike">
 
                 <h4>Para ver mais Acessórios, clique e acesse:</h4>
                 <a href="pages/materialSport.html">Material Esportivo</a>
@@ -95,12 +95,12 @@
         <section>
             <article>
                 <h3>Tênis Esportivos.</h3>
-                <img src="/imgPrincipal/tenis/corri.jpg" alt="tenis">
-                <img src="/imgPrincipal/tenis/corrida.jpg" alt="tenis">
-                <img src="/imgPrincipal/tenis/nike.jpg" alt="tenis">
-                <img src="/imgPrincipal/tenis/tenis.jpg" alt="tenis">
-                <img src="/imgPrincipal/tenis/corri.jpg" alt="tenis">
-                <img src="/imgPrincipal/tenis/corrida.jpg" alt="tenis">
+                <img src="imgPrincipal/tenis/corri.jpg" alt="tenis">
+                <img src="imgPrincipal/tenis/corrida.jpg" alt="tenis">
+                <img src="imgPrincipal/tenis/nike.jpg" alt="tenis">
+                <img src="imgPrincipal/tenis/tenis.jpg" alt="tenis">
+                <img src="imgPrincipal/tenis/corri.jpg" alt="tenis">
+                <img src="imgPrincipal/tenis/corrida.jpg" alt="tenis">
                 <h4>Para ver mais Acessórios, clique e acesse:</h4>
                 <a href="pages/tenis.html">Tênis Esportivos</a>
             </article>
