--- a/pages/camisas.html
+++ b/pages/camisas.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Carvalho Sport's</title>
     <link rel="stylesheet" href="/css/camisas.css">
     <link rel="shortcut icon" href="" type="image/x-icon">
-    <title>Carvalho Sport's</title>
 </head>
 
 <body>
@@ -15,11 +15,11 @@
     </header>
     <!--6 nav-->
      <nav>
-            <a href="/index.html" target="_self">Pagina Inicial</a>
-            <a href="/pages/chuteiras.html" target="_self">Chuteiras</a>
-            <a href="/pages/camisas.html" target="_self">Camisas de Time</a>
-            <a href="/pages/materialSport.html" target="_self">Material Esportivo</a>
-            <a href="/pages/tenis.html" target="_self">Tenis Esportivos</a>
+            <a href="/index.html">Pagina Inicial</a>
+            <a href="chuteiras.html">Chuteiras</a>
+            <a href="camisas.html">Camisas de Time</a>
+            <a href="materialSport.html">Material Esportivo</a>
+            <a href="tenis.html">Tenis Esportivos</a>
      </nav>
     <main>
         <section>
