--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <!--6 nav-->
     <nav>
-        <a href="/index.html">Pagina Inicial</a>
+        <a href="index.html">Pagina Inicial</a>
         <a href="pages/chuteiras.html">Chuteiras</a>
         <a href="pages/camisas.html">Camisas de Time</a>
         <a href="pages/materialSport.html">Acessórios Esportivo</a>
